--- a/index.html
+++ b/index.html
@@ -1312,9 +1312,9 @@
                     <ul class="footer-links">
                         <li><a href="#home" data-key="footer.link1">首页</a></li>
                         <li><a href="#services" data-key="footer.link3">我们的服务</a></li>
-                        <li><a href="about.html" data-key="footer.link4">产品中心</a></li>
+                        <li><a href="#products" data-key="footer.link4">产品中心</a></li>
                         <li><a href="#contact" data-key="footer.link5">联系我们</a></li>
-                        <li><a href="#about" data-key="footer.link2">关于我们</a></li>
+                        <li><a href="about.html" data-key="footer.link2">关于我们</a></li>
                     </ul>
                 </div>
                 
